# ultramemory

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  README.md  SECURITY.md  autoresearch_bench.py  autoresearch_opus.py  cli.py  experiments_bench.jsonl  experiments_opus.jsonl  memory_engine.py  overnight_pipeline.py  pyproject.toml  requirements.txt  research_opus.md  run_steps_2_5.py  server.py  test_engine.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
docs/: V03_BUILD_PLAN.md
plugin/: README.md  package.json
plugin/src/: plugin.ts
supermemory/: __init__.py  backfill_events.py  cli.py  config.py  dedup.py  engine.py  ingest.py  server.py
tests/: __init__.py  test_engine.py  test_temporal.py
ui/: next.config.ts  pnpm-lock.yaml
ui/app/: context.tsx  d3-force-3d.d.ts  globals.css  layout.tsx  types.ts
ui/app/components/: Graph3D.tsx  LeftSidebar.tsx  RightSidebar.tsx
ultramemory/: engine.py  server.py  temporal.py
